--- a/PAGES/success.html
+++ b/PAGES/success.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PNL - Peace N' Lovés</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="CSS/style2.css">
 </head>
 
 <body>
@@ -76,11 +76,7 @@
             révolution de l’attitude. Les deux frères ont su écrire leur propre histoire et inspirer une génération
             entière avec leur musique, leur vision du monde et leur message de liberté.</p>
     </section>
-    <section>
-        <h2>Sources & Références</h2>
-        <p>- Discographie de PNL <br>
-           - Interviews et articles sur leur parcours (à ajouter selon tes sources)</p>
-    </section>
+
     <footer>
         <p>© 2024 PNL Official Website</p>
     </footer>
