--- a/index.html
+++ b/index.html
@@ -1,18 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>PNL - Deux frères</title>
 </head>
+
 <body>
     <header>
         <div class="bandeau">
             <img src="IMG/banniere.jfif" alt="PLN-tour-eiffel">
         </div>
-        <h1>PNL : Une vie difficile</h1>
+        <h1>Biographie de Tarik et Nabil Andrieu</h1>
     </header>
-        
-    </body>
+    <main>
+
+        <h2>Enfance et Jeunesse :</h2>
+        <p>Tarik (Ademo) et Nabil (N.O.S) Andrieu, nés respectivement le 26 décembre 1986 et le 25 avril 1989,
+            grandissent dans le quartier des Tarterêts à Corbeil-Essonnes. Leur père, René Andrieu, un ancien braqueur
+            d'origine corse, les élève seul après l'absence de leur mère. René fonde une association en 1994, mais après
+            une arrestation pour trafic de drogue en 1995, il est contraint de déménager avec ses enfants à
+            Brive-la-Gaillarde.</p>
+
+        <h2>Adolescence et études :</h2>
+        <p>À Brive, Nabil poursuit des études de commerce au lycée Danton et à l'IUT de Ville d'Avray, tandis que Tarik
+            obtient un BEP électrotechnique. Les deux frères se passionnent pour le hip-hop et, dès l'âge de 15 ans,
+            Tarik commence à rapper. En parallèle, ils se lancent dans le trafic de drogue, participant à des opérations
+            de go fast. Tarik passera par la prison de Fleury-Mérogis avant de se consacrer pleinement à la musique.</p>
+
+        <h2>Carrière de PNL :</h2>
+
+        <br>
+        <br>
+
+        <div class="content">
+            <img src="IMG/nosademo.png" alt="imgnosademo">
+            <div class="text">
+                <h3>Débuts (2008-2014)</h3>
+                <p>Les frères Tarik (Ademo) et Nabil (N.O.S) commencent leur carrière musicale en solo. Tarik publie sa
+                    première mixtape en 2008, tandis que Nabil lance son projet en 2011. Après quelques années
+                    difficiles,
+                    dont un passage en prison pour Tarik, ils se regroupent en tant que groupe PNL. Leur style musical
+                    évolue, attirant l'attention des critiques.</p>
+            </div>
+        </div>
+
+
+
+        <div class="content">
+            <img src="IMG/quelafamille.jpg" alt="imgqlf">
+            <div class="text">
+                <h3>Que la famille : début du succès (2015)</h3>
+                <p>Le groupe sort son premier EP, *Que la famille*, en 2015, qui devient rapidement populaire, certifié
+                    platine en 2020. Ils commencent à se faire un nom avec des clips à succès comme *Le monde ou rien*,
+                    qui
+                    devient un slogan politique et atteint plus de 127 millions de vues.</p>
+            </div>
+        </div>
+
+        <div class="content">
+            <img src="IMG/lemondeourien.jpg" alt="imgmondechico">
+            <div class="text">
+                <h3>Le Monde Chico et succès croissant (2015-2016)</h3>
+                <p>Le 30 octobre 2015, PNL publie leur premier album *Le Monde Chico*, qui rencontre un immense succès.
+                    L'album est certifié triple platine, avec plus de 300 000 ventes. Le groupe devient un phénomène de
+                    la
+                    scène rap française grâce à des clips innovants et une stratégie de communication mystérieuse.</p>
+            </div>
+        </div>
+
+
+        <div class="content">
+            <img src="IMG/danslalegende.jpg" alt="imglegende">
+            <div class="text">
+                <h3>Dans la légende et tournée (2016-2017)</h3>
+                <p>En 2016, PNL sort *Dans la légende*, qui obtient également un grand succès. L'album devient disque de
+                    diamant avec plus de 500 000 ventes. Ils annoncent une tournée internationale, mais sont contraints
+                    d'annuler un concert à Coachella à cause de problèmes de visa pour Tarik.</p>
+            </div>
+        </div>
+
+
+        <div class="content">
+            <img src="IMG/deuxfreres.webp" alt="imgfreres">
+            <div class="text">
+                <h3>Retour et nouveaux succès (2018-2020)</h3>
+                <p>Après une longue pause, PNL fait son retour en 2018 avec le clip *À l'Ammoniaque*. En 2019, ils
+                    publient
+                    *Deux Frères*, un album qui bat des records de streaming et devient triple disque de platine.
+                    L'album
+                    est accompagné d'une tournée à succès, malgré des reports dus à la pandémie de Covid-19.</p>
+            </div>
+        </div>
+
+
+        <div class="content">
+            <img src="IMG/gaza.jpg" alt="imggaza">
+            <div class="text">
+                <h3>Gaza (2023)</h3>
+                <p>En décembre 2023, PNL fait son grand retour après 56 mois d'absence avec la sortie du single *Gaza*,
+                    marquant une nouvelle étape dans leur carrière musicale.</p>
+            </div>
+        </div>
+
+        <p>
+            Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi est-ce qu'ils ont changé le monde du rap
+            français ?
+        </p>
+
+
+    </main>
+    <footer>
+        <p>© 2024 PNL Official Website</p>
+    </footer>
+
+</body>
+
 </html>
