Amélioration success + aboutme

--- a/PAGES/success.html
+++ b/PAGES/success.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PNL - Peace N' Lovés</title>
-    <link rel="stylesheet" href="CSS/style2.css">
+    <link rel="stylesheet" href="/CSS/style2.css">
 </head>
 
 <body>
     <header>
         <h1>PNL : Le Phénomène Rap Français</h1>
     </header>
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <br>
+    <br>
     <section>
         <h2>Introduction</h2>
         <p>PNL (Peace N’ Lovés), c’est bien plus qu’un groupe de rap : c’est une légende vivante du paysage musical
@@ -77,6 +82,15 @@
             entière avec leur musique, leur vision du monde et leur message de liberté.</p>
     </section>
 
+    <div class="lien">
+        <br>
+        <a class="one" href="../index.html">← Biographie de PNL
+        </a>
+        <a class="two" href="/PAGES/aboutme.html">ABOUT ME →
+        </a>
+    </div>
+    <br>
+    <br>
     <footer>
         <p>© 2024 PNL Official Website</p>
     </footer>
