--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class="bandeau">
             <img src="IMG/banniere.jfif" alt="PLN-tour-eiffel">
+            <br>
         </div>
         <h1>Biographie de Tarik et Nabil Andrieu</h1>
     </header>
@@ -105,10 +106,12 @@
             </div>
         </div>
 
-        <p>
-            Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi est-ce qu'ils ont changé le monde du rap
-            français ?
-        </p>
+        <div class="lien">
+            <br>
+            <a class="one" href="/PAGES/success.html">Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi est-ce qu'ils
+                ont changé le monde du rap français ? →
+            </a>
+        </div>
 
 
     </main>
