--- a/PAGES/aboutme.html
+++ b/PAGES/aboutme.html
@@ -4,10 +4,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT ME</title>
-    <link rel="stylesheet" href="/CSS/style3.css">
+    <link rel="stylesheet" href="../CSS/style3.css">
+    <title>ABOUTME</title>
 </head>
+
 <body>
-    blablabla
+    <header>
+        <div class="container">
+            <div class="left-container">
+                <img src="../IMG/pdp.jpg" alt="Photo de profil">
+            </div>
+            <div class="right-container">
+                <h3><strong>Simon MARIE</strong></h3>
+            </div>
+        </div>
+    </header>
+    <main>
+        <article>
+
+            <section>
+                <h2>
+                    Scolarité
+                </h2>
+                <ul>
+                    <li>Collège André Malraux (Brevet mention Très Bien)</li>
+                    <li>Lycée Mezeray-Gabriel (Bac Mention Bien)</li>
+                </ul>
+            </section>
+            <section>
+                <h2>
+                    Langues
+                </h2>
+                <ul>
+                    <li>Français</li>
+                    <li>Anglais</li>
+                    <li>Allemand</li>
+                </ul>
+
+            </section>
+
+            <section>
+                <h2>
+                    Expériences Professionelles
+                </h2>
+                <ul>
+                    <li>Groupe DOUILLET</li>
+                    <li>HOWMET aérospace</li>
+                    <li>Groupe DOUILLET</li>
+                    <li>Pépinières LEVAVASSEUR</li>
+                </ul>
+            </section>
+        </article>
+        <article>
+            <section>
+                <h2>
+                    Qualités
+                </h2>
+                <ul>
+                    <li>Sérieux</li>
+                    <li>Ponctuel</li>
+                    <li>Patient</li>
+                </ul>
+            </section>
+            <section>
+                <h2>
+                    Compétences
+                </h2>
+                <ul>
+                    <li>Travail en groupe</li>
+                    <li>Informatique</li>
+                    <li>Bon relationnel</li>
+                </ul>
+            </section>
+            <section>
+                <h2>
+                    Centres d'intérets
+                </h2>
+                <ul>
+                    <li>Bivouac</li>
+                    <li>Football</li>
+                    <li>Informatique</li>
+                    <li>Voyages</li>
+                </ul>
+            </section>
+        </article>
+        <div class="retour">
+            <button onclick="history.back();">Retour</button>
+        </div>
+    </main>
 </body>
+
 </html>
