--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
         <div class="content">
             <img src="IMG/quelafamille.jpg" alt="imgqlf">
             <div class="text">
-                <h3>Que la famille : début du succès (2015)</h3>
-                <p>Le groupe sort son premier EP, *Que la famille*, en 2015, qui devient rapidement populaire, certifié
-                    platine en 2020. Ils commencent à se faire un nom avec des clips à succès comme *Le monde ou rien*,
+                <h3><span class="sl">Que la famille</span> : début du succès (2015)</h3>
+                <p>Le groupe sort son premier EP, <span class="sl">Que la famille</span>, en 2015, qui devient
+                    rapidement populaire, certifié
+                    platine en 2020. Ils commencent à se faire un nom avec des clips à succès comme <span class="sl">Le
+                        monde ou rien</span>,
                     qui
                     devient un slogan politique et atteint plus de 127 millions de vues.</p>
             </div>
@@ -64,8 +66,9 @@
         <div class="content">
             <img src="IMG/lemondeourien.jpg" alt="imgmondechico">
             <div class="text">
-                <h3>Le Monde Chico et succès croissant (2015-2016)</h3>
-                <p>Le 30 octobre 2015, PNL publie leur premier album *Le Monde Chico*, qui rencontre un immense succès.
+                <h3><span class="sl">Le Monde Chico</span> et succès croissant (2015-2016)</h3>
+                <p>Le 30 octobre 2015, PNL publie leur premier album <span class="sl">Le Monde Chico</span>, qui
+                    rencontre un immense succès.
                     L'album est certifié triple platine, avec plus de 300 000 ventes. Le groupe devient un phénomène de
                     la
                     scène rap française grâce à des clips innovants et une stratégie de communication mystérieuse.</p>
@@ -76,8 +79,9 @@
         <div class="content">
             <img src="IMG/danslalegende.jpg" alt="imglegende">
             <div class="text">
-                <h3>Dans la légende et tournée (2016-2017)</h3>
-                <p>En 2016, PNL sort *Dans la légende*, qui obtient également un grand succès. L'album devient disque de
+                <h3><span class="sl">Dans la légende</span> et tournée (2016-2017)</h3>
+                <p>En 2016, PNL sort <span class="sl">Dans la légende</span>, qui obtient également un grand succès.
+                    L'album devient disque de
                     diamant avec plus de 500 000 ventes. Ils annoncent une tournée internationale, mais sont contraints
                     d'annuler un concert à Coachella à cause de problèmes de visa pour Tarik.</p>
             </div>
@@ -88,11 +92,14 @@
             <img src="IMG/deuxfreres.webp" alt="imgfreres">
             <div class="text">
                 <h3>Retour et nouveaux succès (2018-2020)</h3>
-                <p>Après une longue pause, PNL fait son retour en 2018 avec le clip *À l'Ammoniaque*. En 2019, ils
+                <p>Après une longue pause, PNL fait son retour en 2018 avec le clip <span class="sl">À
+                        l'Ammoniaque</span>. En 2019, ils
                     publient
-                    *Deux Frères*, un album qui bat des records de streaming et devient triple disque de platine.
+                    <span class="sl">Deux Frères</span>, un album qui bat des records de streaming et devient triple
+                    disque de platine.
                     L'album
-                    est accompagné d'une tournée à succès, malgré des reports dus à la pandémie de Covid-19.</p>
+                    est accompagné d'une tournée à succès, malgré des reports dus à la pandémie de Covid-19.
+                </p>
             </div>
         </div>
 
@@ -100,16 +107,20 @@
         <div class="content">
             <img src="IMG/gaza.jpg" alt="imggaza">
             <div class="text">
-                <h3>Gaza (2023)</h3>
-                <p>En décembre 2023, PNL fait son grand retour après 56 mois d'absence avec la sortie du single *Gaza*,
+                <h3><span class="sl">Gaza</span> (2023)</h3>
+                <p>En décembre 2023, PNL fait son grand retour après 56 mois d'absence avec la sortie du single <span
+                        class="sl">Gaza</span>,
                     marquant une nouvelle étape dans leur carrière musicale.</p>
             </div>
         </div>
 
         <div class="lien">
             <br>
-            <a class="one" href="/PAGES/success.html">Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi est-ce qu'ils
+            <a class="one" href="/PAGES/success.html">Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi
+                est-ce qu'ils
                 ont changé le monde du rap français ? →
+            </a>
+            <a class="two" href="/PAGES/aboutme.html">ABOUT ME →
             </a>
         </div>
 
