ameliorations responsive + amelioration about me

--- a/PAGES/aboutme.html
+++ b/PAGES/aboutme.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style3.css">
-    <title>ABOUTME</title>
+    <title>ABOUT ME</title>
 </head>
 
 <body>
@@ -15,79 +15,55 @@
                 <img src="../IMG/pdp.jpg" alt="Photo de profil">
             </div>
             <div class="right-container">
-                <h3><strong>Simon MARIE</strong></h3>
+                <h1>Simon MARIE</h1>
+                <p class="subtitle">Développeur Web & Passionné de PNL</p>
             </div>
         </div>
     </header>
     <main>
-        <article>
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
+        <section>
+            <h2>A propos de moi...</h2>
+            <p>
+                Bonjour !<br><br>
+                Je m'appelle Simon, et je suis passionné par la technologie, la musique (notamment PNL), le sport
+                ainsi que le bivouac.<br><br>
+                Je suis quelqu'un de dynamique, rigoureux et sérieux, et je m'efforce de toujours donner le meilleur
+                de moi-même dans ce que j'entreprends.
+            </p>
+        </section>
+        <section>
+            <p>
+                Mon parcours étudiant m'a permis de développer des compétences en informatique, comme le
+                développement web et le design graphique, ce qui m'a permis de créer mon site internet à propos de
+                PNL.<br><br>
+                Mais au-delà des compétences techniques, c'est l'interaction avec les autres et la collaboration qui
+                me passionnent. J'apprécie particulièrement travailler en équipe, relever de nouveaux défis ou aider
+                les autres à atteindre leurs objectifs.<br><br>
 
-            <section>
-                <h2>
-                    Scolarité
-                </h2>
-                <ul>
-                    <li>Collège André Malraux (Brevet mention Très Bien)</li>
-                    <li>Lycée Mezeray-Gabriel (Bac Mention Bien)</li>
-                </ul>
-            </section>
-            <section>
-                <h2>
-                    Langues
-                </h2>
-                <ul>
-                    <li>Français</li>
-                    <li>Anglais</li>
-                    <li>Allemand</li>
-                </ul>
+                En dehors de mes activités professionnelles, j'adore voyager, faire du bivouac, pratiquer du sport
+                et jouer aux jeux vidéo. Cela me permet de nourrir ma créativité et de rester inspiré.
+            </p>
+        </section>
+        <section>
+            <p>
+                Étant un très grand fan de PNL, je me devais de créer un site à leur sujet. Leur musique est une
+                source d'inspiration, et leur style unique a révolutionné le monde du rap. PNL n'est pas seulement
+                un duo musical, mais un phénomène culturel qui touche les âmes avec ses textes profonds et son
+                ambiance musicale particulière.<br><br>
+                Écouter leurs morceaux, c'est s'évader, rêver, voyager et trouver une forme de réconfort. Leur
+                impact est indéniable, et leur approche de la musique continue de me fasciner.
+            </p>
+        </section>
+        <section>
+            <p>
+                Si tu veux en savoir plus ou échanger sur un sujet qui te passionne, n'hésite pas à me contacter.
+                J'aime rencontrer de nouvelles personnes et partager des idées !
+            </p>
+        </section>
 
-            </section>
-
-            <section>
-                <h2>
-                    Expériences Professionelles
-                </h2>
-                <ul>
-                    <li>Groupe DOUILLET</li>
-                    <li>HOWMET aérospace</li>
-                    <li>Groupe DOUILLET</li>
-                    <li>Pépinières LEVAVASSEUR</li>
-                </ul>
-            </section>
-        </article>
-        <article>
-            <section>
-                <h2>
-                    Qualités
-                </h2>
-                <ul>
-                    <li>Sérieux</li>
-                    <li>Ponctuel</li>
-                    <li>Patient</li>
-                </ul>
-            </section>
-            <section>
-                <h2>
-                    Compétences
-                </h2>
-                <ul>
-                    <li>Travail en groupe</li>
-                    <li>Informatique</li>
-                    <li>Bon relationnel</li>
-                </ul>
-            </section>
-            <section>
-                <h2>
-                    Centres d'intérets
-                </h2>
-                <ul>
-                    <li>Bivouac</li>
-                    <li>Football</li>
-                    <li>Informatique</li>
-                    <li>Voyages</li>
-                </ul>
-            </section>
-        </article>
         <div class="retour">
             <button onclick="history.back();">Retour</button>
         </div>
