img ademo et nos au survol

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/bc7f123f61.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/style.css">
     <title>PNL - Deux frères</title>
 </head>
@@ -17,13 +18,28 @@
         <h1>Biographie de Tarik et Nabil Andrieu</h1>
     </header>
     <main>
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
 
         <h2>Enfance et Jeunesse :</h2>
-        <p>Tarik (Ademo) et Nabil (N.O.S) Andrieu, nés respectivement le 26 décembre 1986 et le 25 avril 1989,
+        <p><span class="ademo-wrapper">
+                <span class="ademo">Tarik (Ademo)</span>
+                <img src="/IMG/imgademo.jpg" alt="Image à afficher 1" class="image-ademo">
+            </span>
+            et
+            <span class="nos-wrapper">
+                <span class="nos">Nabil (N.O.S)</span>
+                <img src="/IMG/imgnos.jpg" alt="Image à afficher 2" class="image-nos">
+            </span> Andrieu, nés
+            respectivement le 26 décembre 1986 et le 25 avril 1989,
             grandissent dans le quartier des Tarterêts à Corbeil-Essonnes. Leur père, René Andrieu, un ancien braqueur
             d'origine corse, les élève seul après l'absence de leur mère. René fonde une association en 1994, mais après
             une arrestation pour trafic de drogue en 1995, il est contraint de déménager avec ses enfants à
-            Brive-la-Gaillarde.</p>
+            Brive-la-Gaillarde.
+        </p>
+
+
 
         <h2>Adolescence et études :</h2>
         <p>À Brive, Nabil poursuit des études de commerce au lycée Danton et à l'IUT de Ville d'Avray, tandis que Tarik
@@ -33,7 +49,6 @@
 
         <h2>Carrière de PNL :</h2>
 
-        <br>
         <br>
 
         <div class="content">
@@ -59,7 +74,7 @@
                     platine en 2020. Ils commencent à se faire un nom avec des clips à succès comme <span class="sl">Le
                         monde ou rien</span>,
                     qui
-                    devient un slogan politique et atteint plus de 127 millions de vues.</p>
+                    devient un slogan politique et atteint plus de 127 millions de vues. </p>
             </div>
         </div>
 
@@ -71,7 +86,9 @@
                     rencontre un immense succès.
                     L'album est certifié triple platine, avec plus de 300 000 ventes. Le groupe devient un phénomène de
                     la
-                    scène rap française grâce à des clips innovants et une stratégie de communication mystérieuse.</p>
+                    scène rap française grâce à des clips innovants et une stratégie de communication mystérieuse. <a
+                        class="trolley" href="https://www.fnac.com/PNL/ia3991764"><i
+                            class="fa-solid fa-cart-shopping"></i></a></p>
             </div>
         </div>
 
@@ -83,7 +100,8 @@
                 <p>En 2016, PNL sort <span class="sl">Dans la légende</span>, qui obtient également un grand succès.
                     L'album devient disque de
                     diamant avec plus de 500 000 ventes. Ils annoncent une tournée internationale, mais sont contraints
-                    d'annuler un concert à Coachella à cause de problèmes de visa pour Tarik.</p>
+                    d'annuler un concert à Coachella à cause de problèmes de visa pour Tarik. <a class="trolley"
+                        href="https://www.fnac.com/PNL/ia3991764"><i class="fa-solid fa-cart-shopping"></i></a></p>
             </div>
         </div>
 
@@ -99,6 +117,8 @@
                     disque de platine.
                     L'album
                     est accompagné d'une tournée à succès, malgré des reports dus à la pandémie de Covid-19.
+                    <a class="trolley" href="https://www.fnac.com/PNL/ia3991764"><i
+                            class="fa-solid fa-cart-shopping"></i></a>
                 </p>
             </div>
         </div>
@@ -133,5 +153,3 @@
 </body>
 
 </html>
-git config --global user.email "simonmarie055@gmail.com"
-  git config --global user.name "S1moxi11"
