--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/bc7f123f61.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>PNL - Deux frères</title>
 </head>
 
 <body>
     <header>
         <div class="bandeau">
-            <img src="IMG/banniere.jfif" alt="PLN-tour-eiffel">
+            <img src="/IMG/banniere.jfif" alt="PLN-tour-eiffel">
             <br>
         </div>
         <h1>Biographie de Tarik et Nabil Andrieu</h1>
@@ -52,7 +52,7 @@
         <br>
 
         <div class="content">
-            <img src="IMG/nosademo.png" alt="imgnosademo">
+            <img src="/IMG/nosademo.png" alt="imgnosademo">
             <div class="text">
                 <h3>Débuts (2008-2014)</h3>
                 <p>Les frères Tarik (Ademo) et Nabil (N.O.S) commencent leur carrière musicale en solo. Tarik publie sa
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-            <img src="IMG/quelafamille.jpg" alt="imgqlf">
+            <img src="/IMG/quelafamille.jpg" alt="imgqlf">
             <div class="text">
                 <h3><span class="sl">Que la famille</span> : début du succès (2015)</h3>
                 <p>Le groupe sort son premier EP, <span class="sl">Que la famille</span>, en 2015, qui devient
@@ -79,7 +79,7 @@
         </div>
 
         <div class="content">
-            <img src="IMG/lemondeourien.jpg" alt="imgmondechico">
+            <img src="/IMG/lemondeourien.jpg" alt="imgmondechico">
             <div class="text">
                 <h3><span class="sl">Le Monde Chico</span> et succès croissant (2015-2016)</h3>
                 <p>Le 30 octobre 2015, PNL publie leur premier album <span class="sl">Le Monde Chico</span>, qui
