--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/bc7f123f61.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>PNL - Deux frères</title>
 </head>
@@ -87,7 +90,7 @@
                     L'album est certifié triple platine, avec plus de 300 000 ventes. Le groupe devient un phénomène de
                     la
                     scène rap française grâce à des clips innovants et une stratégie de communication mystérieuse. <a
-                        class="trolley" href="https://www.fnac.com/PNL/ia3991764"><i
+                        class="trolley" href="https://www.fnac.com/PNL/ia3991764" target="_blank"><i
                             class="fa-solid fa-cart-shopping"></i></a></p>
             </div>
         </div>
@@ -101,7 +104,7 @@
                     L'album devient disque de
                     diamant avec plus de 500 000 ventes. Ils annoncent une tournée internationale, mais sont contraints
                     d'annuler un concert à Coachella à cause de problèmes de visa pour Tarik. <a class="trolley"
-                        href="https://www.fnac.com/PNL/ia3991764"><i class="fa-solid fa-cart-shopping"></i></a></p>
+                        href="https://www.fnac.com/PNL/ia3991764 " target="_blank"><i class="fa-solid fa-cart-shopping"></i></a></p>
             </div>
         </div>
 
@@ -117,7 +120,7 @@
                     disque de platine.
                     L'album
                     est accompagné d'une tournée à succès, malgré des reports dus à la pandémie de Covid-19.
-                    <a class="trolley" href="https://www.fnac.com/PNL/ia3991764"><i
+                    <a class="trolley" href="https://www.fnac.com/PNL/ia3991764" target="_blank"><i
                             class="fa-solid fa-cart-shopping"></i></a>
                 </p>
             </div>
