--- a/PAGES/aboutme.html
+++ b/PAGES/aboutme.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <title>ABOUT ME</title>
 </head>
 
@@ -20,48 +23,64 @@
             </div>
         </div>
     </header>
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
     <main>
-        <div class="loader-container">
-            <div class="loader"></div>
+
+        <div class="first-container">
+            <img src="/IMG/gnos.jpg" alt="gauche">
         </div>
-        <section>
-            <h2>A propos de moi...</h2>
-            <p>
-                Bonjour !<br><br>
-                Je m'appelle Simon, et je suis passionné par la technologie, la musique (notamment PNL), le sport
-                ainsi que le bivouac.<br><br>
-                Je suis quelqu'un de dynamique, rigoureux et sérieux, et je m'efforce de toujours donner le meilleur
-                de moi-même dans ce que j'entreprends.
-            </p>
-        </section>
-        <section>
-            <p>
-                Mon parcours étudiant m'a permis de développer des compétences en informatique, comme le
-                développement web et le design graphique, ce qui m'a permis de créer mon site internet à propos de
-                PNL.<br><br>
-                Mais au-delà des compétences techniques, c'est l'interaction avec les autres et la collaboration qui
-                me passionnent. J'apprécie particulièrement travailler en équipe, relever de nouveaux défis ou aider
-                les autres à atteindre leurs objectifs.<br><br>
 
-                En dehors de mes activités professionnelles, j'adore voyager, faire du bivouac, pratiquer du sport
-                et jouer aux jeux vidéo. Cela me permet de nourrir ma créativité et de rester inspiré.
-            </p>
-        </section>
-        <section>
-            <p>
-                Étant un très grand fan de PNL, je me devais de créer un site à leur sujet. Leur musique est une
-                source d'inspiration, et leur style unique a révolutionné le monde du rap. PNL n'est pas seulement
-                un duo musical, mais un phénomène culturel qui touche les âmes avec ses textes profonds et son
-                ambiance musicale particulière.<br><br>
-                Écouter leurs morceaux, c'est s'évader, rêver, voyager et trouver une forme de réconfort. Leur
-                impact est indéniable, et leur approche de la musique continue de me fasciner.
-            </p>
-        </section>
+        <div class="second-container">
+            <div class="text">
+                <section>
+                    <h2>A propos de moi...</h2>
+                    <p>
+                        Bonjour !<br><br>
+                        Je m'appelle Simon, et je suis passionné par la technologie, la musique (notamment PNL), le sport
+                        ainsi que le bivouac.<br><br>
+                        Je suis quelqu'un de dynamique, rigoureux et sérieux, et je m'efforce de toujours donner le meilleur
+                        de moi-même dans ce que j'entreprends.
+                    </p>
+                </section>
+                <section>
+                    <p>
+                        Mon parcours étudiant m'a permis de développer des compétences en informatique, comme le
+                        développement web et le design graphique, ce qui m'a permis de créer mon site internet à propos de
+                        PNL.<br><br>
+                        Mais au-delà des compétences techniques, c'est l'interaction avec les autres et la collaboration qui
+                        me passionnent. J'apprécie particulièrement travailler en équipe, relever de nouveaux défis ou aider
+                        les autres à atteindre leurs objectifs.<br><br>
 
+                        En dehors de mes activités professionnelles, j'adore voyager, faire du bivouac, pratiquer du sport
+                        et jouer aux jeux vidéo. Cela me permet de nourrir ma créativité et de rester inspiré.
+                    </p>
+                </section>
+                <section>
+                    <p>
+                        Étant un très grand fan de PNL, je me devais de créer un site à leur sujet. Leur musique est une
+                        source d'inspiration, et leur style unique a révolutionné le monde du rap. PNL n'est pas seulement
+                        un duo musical, mais un phénomène culturel qui touche les âmes avec ses textes profonds et son
+                        ambiance musicale particulière.<br><br>
+                        Écouter leurs morceaux, c'est s'évader, rêver, voyager et trouver une forme de réconfort. Leur
+                        impact est indéniable, et leur approche de la musique continue de me fasciner.
+                    </p>
+                </section>
+            </div>
+        </div>
+
+        <div class="third-container">
+            <img src="/IMG/dademo.jpg" alt="droite">
+        </div>
+
+    </main>
+
+    <footer>
         <div class="retour">
             <button onclick="history.back();">Retour</button>
         </div>
-    </main>
+    </footer>
 </body>
 
 </html>
