last commit / certifications

--- a/PAGES/aboutme.html
+++ b/PAGES/aboutme.html
@@ -34,8 +34,8 @@
 
         <div class="second-container">
             <div class="text">
-                <section>
-                    <h2>A propos de moi...</h2>
+                <div class="txt">
+                    <h2>ABOUT ME</h2>
                     <p>
                         Bonjour !<br><br>
                         Je m'appelle Simon, et je suis passionné par la technologie, la musique (notamment PNL), le sport
@@ -43,8 +43,8 @@
                         Je suis quelqu'un de dynamique, rigoureux et sérieux, et je m'efforce de toujours donner le meilleur
                         de moi-même dans ce que j'entreprends.
                     </p>
-                </section>
-                <section>
+                </div>
+                <div class="txt">
                     <p>
                         Mon parcours étudiant m'a permis de développer des compétences en informatique, comme le
                         développement web et le design graphique, ce qui m'a permis de créer mon site internet à propos de
@@ -56,8 +56,8 @@
                         En dehors de mes activités professionnelles, j'adore voyager, faire du bivouac, pratiquer du sport
                         et jouer aux jeux vidéo. Cela me permet de nourrir ma créativité et de rester inspiré.
                     </p>
-                </section>
-                <section>
+                </div>
+                <div class="txt">
                     <p>
                         Étant un très grand fan de PNL, je me devais de créer un site à leur sujet. Leur musique est une
                         source d'inspiration, et leur style unique a révolutionné le monde du rap. PNL n'est pas seulement
@@ -66,7 +66,7 @@
                         Écouter leurs morceaux, c'est s'évader, rêver, voyager et trouver une forme de réconfort. Leur
                         impact est indéniable, et leur approche de la musique continue de me fasciner.
                     </p>
-                </section>
+                </div>
             </div>
         </div>
 
