appel des fichiers qui marchait pas

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>PNL - Deux frères</title>
 </head>
 
 <body>
     <header>
         <div class="bandeau">
-            <img src="/IMG/banniere.jfif" alt="PLN-tour-eiffel">
+            <img src="IMG/banniere.jfif" alt="PLN-tour-eiffel">
             <br>
         </div>
         <h1>Biographie de Tarik et Nabil Andrieu</h1>
@@ -28,12 +28,12 @@
         <h2>Enfance et Jeunesse :</h2>
         <p><span class="ademo-wrapper">
                 <span class="ademo">Tarik (Ademo)</span>
-                <img src="/IMG/imgademo.jpg" alt="Image à afficher 1" class="image-ademo">
+                <img src="IMG/imgademo.jpg" alt="Image à afficher 1" class="image-ademo">
             </span>
             et
             <span class="nos-wrapper">
                 <span class="nos">Nabil (N.O.S)</span>
-                <img src="/IMG/imgnos.jpg" alt="Image à afficher 2" class="image-nos">
+                <img src="IMG/imgnos.jpg" alt="Image à afficher 2" class="image-nos">
             </span> Andrieu, nés
             respectivement le 26 décembre 1986 et le 25 avril 1989,
             grandissent dans le quartier des Tarterêts à Corbeil-Essonnes. Leur père, René Andrieu, un ancien braqueur
@@ -55,7 +55,7 @@
         <br>
 
         <div class="content">
-            <img src="/IMG/nosademo.png" alt="imgnosademo">
+            <img src="IMG/nosademo.png" alt="imgnosademo">
             <div class="text">
                 <h3>Débuts (2008-2014)</h3>
                 <p>Les frères Tarik (Ademo) et Nabil (N.O.S) commencent leur carrière musicale en solo. Tarik publie sa
@@ -69,7 +69,7 @@
 
 
         <div class="content">
-            <img src="/IMG/quelafamille.jpg" alt="imgqlf">
+            <img src="IMG/quelafamille.jpg" alt="imgqlf">
             <div class="text">
                 <h3><span class="sl">Que la famille</span> : début du succès (2015)</h3>
                 <p>Le groupe sort son premier EP, <span class="sl">Que la famille</span>, en 2015, qui devient
@@ -82,7 +82,7 @@
         </div>
 
         <div class="content">
-            <img src="/IMG/lemondeourien.jpg" alt="imgmondechico">
+            <img src="IMG/lemondeourien.jpg" alt="imgmondechico">
             <div class="text">
                 <h3><span class="sl">Le Monde Chico</span> et succès croissant (2015-2016)</h3>
                 <p>Le 30 octobre 2015, PNL publie leur premier album <span class="sl">Le Monde Chico</span>, qui
