--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 
         <div class="lien">
             <br>
-            <a class="one" href="/PAGES/success.html">Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi
+            <a class="one" href="PAGES/success.html">Pourquoi PNL est le meilleur groupe de rap français ? Pourquoi
                 est-ce qu'ils
                 ont changé le monde du rap français ? →
             </a>
-            <a class="two" href="/PAGES/aboutme.html">ABOUT ME →
+            <a class="two" href="PAGES/aboutme.html">ABOUT ME →
             </a>
         </div>
 
