--- a/PAGES/aboutme.html
+++ b/PAGES/aboutme.html
@@ -29,7 +29,7 @@
     <main>
 
         <div class="first-container">
-            <img src="/IMG/gnos.jpg" alt="gauche">
+            <img src="../IMG/gnos.jpg" alt="gauche">
         </div>
 
         <div class="second-container">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="third-container">
-            <img src="/IMG/dademo.jpg" alt="droite">
+            <img src="../IMG/dademo.jpg" alt="droite">
         </div>
 
     </main>
