--- a/PAGES/success.html
+++ b/PAGES/success.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bc7f123f61.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CSS/style2.css">
+    <link rel="stylesheet" href="../CSS/style2.css">
     <title>PNL - Peace N' Lovés</title>
 </head>
 
 <body>
     <header>
         <div class="bandeau">
-            <img src="/IMG/banniere2.jpg" alt="PNL Banner">
+            <img src="../IMG/banniere2.jpg" alt="PNL Banner">
             <br>
         </div>
         <h1>PNL : Le Phénomène Rap Français</h1>
@@ -28,7 +28,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb1.jpg" alt="PNL Introduction Image">
+                    <img src="../IMG/nb1.jpg" alt="PNL Introduction Image">
                 </div>
                 <div class="text">
                     <h2>Introduction</h2>
@@ -46,7 +46,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb2.png" alt="PNL Ascension Image">
+                    <img src="../IMG/nb2.png" alt="PNL Ascension Image">
                 </div>
                 <div class="text">
                     <h2>L'Ascension de PNL</h2>
@@ -66,7 +66,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb3.jpg" alt="PNL Independence Image">
+                    <img src="../IMG/nb3.jpg" alt="PNL Independence Image">
                 </div>
                 <div class="text">
                     <h2>L’Art du Silence et de l'Indépendance</h2>
@@ -86,7 +86,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb4.jpg" alt="PNL Music Image">
+                    <img src="../IMG/nb4.jpg" alt="PNL Music Image">
                 </div>
                 <div class="text">
                     <h2>Une Musique Entre Réalité et Fiction</h2>
@@ -114,7 +114,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb5.jpg" alt="PNL Visual Image">
+                    <img src="../IMG/nb5.jpg" alt="PNL Visual Image">
                 </div>
                 <div class="text">
                     <h2>L'Univers Visuel de PNL</h2>
@@ -133,7 +133,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb6.jpg" alt="PNL Cultural Impact Image">
+                    <img src="../IMG/nb6.jpg" alt="PNL Cultural Impact Image">
                 </div>
                 <div class="text">
                     <h2>PNL et L'Impact Culturel</h2>
@@ -157,7 +157,7 @@
         <section>
             <div class="content">
                 <div class="image-wrapper">
-                    <img src="/IMG/nb7.jpg" alt="PNL Conclusion Image">
+                    <img src="../IMG/nb7.jpg" alt="PNL Conclusion Image">
                 </div>
                 <div class="text">
                     <h2>Conclusion</h2>
@@ -173,7 +173,7 @@
         <div class="lien">
             <br>
             <a class="one" href="../index.html">← Biographie de PNL</a>
-            <a class="two" href="/PAGES/aboutme.html">ABOUT ME →</a>
+            <a class="two" href="../PAGES/aboutme.html">ABOUT ME →</a>
         </div>
 
     </main>
