--- a/PAGES/aboutme.html
+++ b/PAGES/aboutme.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +8,46 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <title>ABOUT ME</title>
-</head>
+    <style>
+        .btn-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
 
+        .btn-container button {
+            display: inline-block;
+            color: #fff;
+            background-color: #333;
+            font-weight: bold;
+            padding: 12px 25px;
+            border: 2px solid transparent;
+            border-radius: 5px;
+            text-align: center;
+            transition: color 0.3s, background-color 0.3s, transform 0.3s;
+        }
+
+        .btn-container button:hover {
+            color: #000000;
+            background-color: #f5f5f5;
+            transform: scale(1.05);
+            cursor: pointer;
+        }
+
+        @media (max-width: 768px) {
+            .btn-container {
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
+            
+            .btn-container button {
+                width: 80%;
+            }
+        }
+    </style>
+</head>
 <body>
     <header>
         <div class="container">
@@ -27,11 +64,9 @@
         <div class="loader"></div>
     </div>
     <main>
-
         <div class="first-container">
             <img src="../IMG/gnos.jpg" alt="gauche">
         </div>
-
         <div class="second-container">
             <div class="text">
                 <div class="txt">
@@ -52,7 +87,6 @@
                         Mais au-delà des compétences techniques, c'est l'interaction avec les autres et la collaboration qui
                         me passionnent. J'apprécie particulièrement travailler en équipe, relever de nouveaux défis ou aider
                         les autres à atteindre leurs objectifs.<br><br>
-
                         En dehors de mes activités professionnelles, j'adore voyager, faire du bivouac, pratiquer du sport
                         et jouer aux jeux vidéo. Cela me permet de nourrir ma créativité et de rester inspiré.
                     </p>
@@ -69,18 +103,15 @@
                 </div>
             </div>
         </div>
-
         <div class="third-container">
             <img src="../IMG/dademo.jpg" alt="droite">
         </div>
-
     </main>
-
     <footer>
-        <div class="retour">
-            <button onclick="history.back();">Retour</button>
+        <div class="btn-container">
+            <button onclick="window.location.href='../index.html'">Page principale</button>
+            <button onclick="window.location.href='contact.html'">Contacter</button>
         </div>
     </footer>
 </body>
-
 </html>
